--- a/app/src/index.html
+++ b/app/src/index.html
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="discription" content="This site shows my karaoke scores.">
+    <title>あびぃのカラオケDAM採点記録</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <script type="module" src="./readJson.js"></script>
 
     <header>
-        <button class="header-item" id="icon">icon</button>
+        <img class="header-item" id="icon" src="images/eyecon_Abiy.png" alt="icon">
+        <!-- <button class="header-item" id="icon">
+            <img rel="stylesheet" href="images/eyecon_Abiy.png">
+        </button> -->
         <button class="header-item" id="description">About me</button>
         <div class="header-item" id="title">あびぃのカラオケDAM採点記録</div>
         <button class="header-item" id="menu-icon">
