--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
 
     <header>
         <img class="header-item" id="icon" src="images/eyecon_Abiy.png" alt="icon">
-        <!-- <button class="header-item" id="icon">
-            <img rel="stylesheet" href="images/eyecon_Abiy.png">
-        </button> -->
         <button class="header-item" id="description">About me</button>
         <div class="header-item" id="title">あびぃのカラオケDAM採点記録</div>
         <button class="header-item" id="menu-icon">
@@ -175,7 +172,7 @@
     </nav>
 
     <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
-    <script src="login.js"></script>
+    <script type="module" src="login.js"></script>
     <script src="eventListener.js"></script>
 </body>
 </html>
