--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         </ul>
     </nav>
 
-    <script type="module" src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
+    <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
     <script type="module" src="login.js"></script>
     <script type="module" src="eventListener.js"></script>
 </body>
