--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="discription" content="This site shows my karaoke scores.">
     <title>あびぃのカラオケDAM採点記録</title>
+    <link rel="icon" href="/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -171,8 +172,7 @@
         </ul>
     </nav>
 
-    <!-- <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script> -->
-    <script type="module" src="login.js"></script>
+    <script type="module" src="/login.js"></script>
     <script type="module" src="eventListener.js"></script>
 </body>
 </html>
