--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="discription" content="This site shows my karaoke scores.">
     <title>あびぃのカラオケDAM採点記録</title>
-    <link rel="icon" href="/favicon.png" type="image/x-icon">
+    <link rel="icon" href="/images/favicon.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <script type="module" src="./readJson.js"></script>
 
     <header>
-        <img class="header-item" id="icon" src="images/eyecon_Abiy.png" alt="icon">
+        <img class="header-item" id="icon" src="images/favicon.png" alt="icon">
         <button class="header-item" id="description">About me</button>
         <div class="header-item" id="title">あびぃのカラオケDAM採点記録</div>
         <button class="header-item" id="menu-icon">
